// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuillResourceLink it should render if there is an href prop 1`] = `
<DocumentFragment>
  <a
    class="quill-button focus-on-light outlined medium grey"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Click me
  </a>
</DocumentFragment>
`;

exports[`QuillResourceLink it should render if there is not an href prop 1`] = `
<DocumentFragment>
  <a
    class="quill-button focus-on-light outlined medium grey"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Do not click me
  </a>
</DocumentFragment>
`;
